--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "rules": {
+    "no-console": 0,
+    "camelcase": 0,
+    "comma-dangle": 0,
+    "semi": 0
+  }
 }
