--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "artnet": "^1.4.0"
+    "artnet": "^1.4.0",
+    "inquirer": "^6.2.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
