Add more universes; README; demo mode

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "artnet": "^1.4.0",
     "inquirer": "^6.2.0"
   },
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "devDependencies": {
   }
 }
